<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/buttonPanel"
    tools:context=".OptionsPane">

    <Button
        android:id="@+id/option1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/option_1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/option2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/option_2"
        android:layout_below="@+id/option1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/option2"
        android:layout_centerHorizontal="true"
        android:text="@string/option_3" />

</RelativeLayout>