<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".GameMode">

    <FrameLayout
        android:id="@+id/optionPlaceHolder"
        android:layout_width="226dp"
        android:layout_height="231dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/userNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="595dp"
        android:autofillHints=""
        android:gravity="center"
        android:ems="10"
        android:hint="@string/enter_number_here"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="521dp"
        android:text="@string/options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNumber" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionPlaceHolder"
        app:layout_constraintVertical_bias="0.899" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="340dp"
        android:layout_height="69dp"
        android:text="@string/enter_a_number_to_proceed"
        app:layout_constraintBottom_toTopOf="@+id/menuButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionPlaceHolder"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/highScore"
        android:gravity="center"
        android:layout_width="138dp"
        android:layout_height="34dp"
        android:layout_marginStart="229dp"
        android:layout_marginLeft="229dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/userNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/proceedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionPlaceHolder" />

    <ProgressBar
        android:id="@+id/timerBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="213dp"
        android:layout_height="20dp"
        android:layout_marginTop="36dp"
        android:max="10000"
        android:progress="0"
        android:scaleY="5"


        app:layout_constraintBottom_toTopOf="@+id/userNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>